add collapse, add event collapse and fix some css bug

--- a/create_cannes_form.html
+++ b/create_cannes_form.html
@@ -92,6 +92,10 @@
                     </ul>
                 </div>
             </div>
+
+            <button class="sidebar__collapse">
+                <img src="./assets/images/angle-left.svg" alt="Arrow Left Icon">
+            </button>
         </div>
         <div class="content">
             <form class="form">
@@ -127,7 +131,7 @@
                         </div>
                     </div>
 
-                    <div class="form__group">
+                    <div class="form__group form__radio">
                         <label>Action</label>
                         <div class="form__group-wrapper">
                             <input checked type="radio" id="no_action" name="action" value="No action">
@@ -143,7 +147,7 @@
                         </div>
                     </div>
 
-                    <div class="form__group">
+                    <div class="form__group form__radio">
                         <label>Available for</label>
                         <div class="form__group-wrapper">
                             <input checked type="radio" id="everyone" name="available" value="Everyone">
@@ -162,5 +166,7 @@
             </form>
         </div>
     </div>
+
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
