--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                     </ul>
                 </div>
             </div>
+            <button class="sidebar__collapse">
+                <img src="./assets/images/angle-left.svg" alt="Arrow Left Icon">
+            </button>
         </div>
         <div class="content">
             <h1 class="content__title">Canned responses</h1>
@@ -311,5 +314,8 @@
             </div>
         </div>
     </div>
+
+
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
