--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                         <tbody>
                             <tr>
-                                <td class="table__checkbox"><input type="checkbox"></td>
+                                <td class="table__checkbox"><div><input type="checkbox"></div></td>
                                 <td class="table__title">
                                     <div class="table__title-wrapper">
                                         <img src="./assets/images/image-icon.svg" alt="Image Icon">
@@ -204,11 +204,11 @@
                                 <td class="table__usage">1,024</td>
                             </tr>
                             <tr>
-                                <td class="table__checkbox"><input type="checkbox"></td>
+                                <td class="table__checkbox"><div><input type="checkbox"></div></td>
                                 <td class="table__title">
                                     <div class="table__title-wrapper">
                                         <img src="./assets/images/image-icon.svg" alt="Image Icon">
-                                        <span>Love looks not with the eyes with the eyes</span>
+                                        <span>Love looks not with the eyes</span>
                                     </div>
                                     <div class="tag"><button class="tag--btn">/hello</button></div>
                                 </td>
@@ -219,11 +219,11 @@
                                 <td class="table__usage">1,024</td>
                             </tr>
                             <tr>
-                                <td class="table__checkbox"><input type="checkbox"></td>
+                                <td class="table__checkbox"><div><input type="checkbox"></div></td>
                                 <td class="table__title">
                                     <div class="table__title-wrapper">
                                         <img src="./assets/images/image-icon.svg" alt="Image Icon">
-                                        <span>Love looks not with the eyes with the eyes</span>
+                                        <span>Love looks not with the eyes</span>
                                     </div>
                                     <div class="tag"><button class="tag--btn">/hello</button></div>
                                 </td>
@@ -234,11 +234,11 @@
                                 <td class="table__usage">1,024</td>
                             </tr>
                             <tr>
-                                <td class="table__checkbox"><input type="checkbox"></td>
+                                <td class="table__checkbox"><div><input type="checkbox"></div></td>
                                 <td class="table__title">
                                     <div class="table__title-wrapper">
                                         <img src="./assets/images/image-icon.svg" alt="Image Icon">
-                                        <span>Love looks not with the eyes with the eyes</span>
+                                        <span>Love looks not with the eyes</span>
                                     </div>
                                     <div class="tag"><button class="tag--btn">/hello</button></div>
                                 </td>
@@ -249,11 +249,11 @@
                                 <td class="table__usage">1,024</td>
                             </tr>
                             <tr>
-                                <td class="table__checkbox"><input type="checkbox"></td>
+                                <td class="table__checkbox"><div><input type="checkbox"></div></td>
                                 <td class="table__title">
                                     <div class="table__title-wrapper">
                                         <img src="./assets/images/image-icon.svg" alt="Image Icon">
-                                        <span>Love looks not with the eyes with the eyes</span>
+                                        <span>Love looks not with the eyes</span>
                                     </div>
                                     <div class="tag"><button class="tag--btn">/hello</button></div>
                                 </td>
@@ -264,11 +264,11 @@
                                 <td class="table__usage">1,024</td>
                             </tr>
                             <tr>
-                                <td class="table__checkbox"><input type="checkbox"></td>
+                                <td class="table__checkbox"><div><input type="checkbox"></div></td>
                                 <td class="table__title">
                                     <div class="table__title-wrapper">
                                         <img src="./assets/images/image-icon.svg" alt="Image Icon">
-                                        <span>Love looks not with the eyes with the eyes</span>
+                                        <span>Love looks not with the eyes</span>
                                     </div>
                                     <div class="tag"><button class="tag--btn">/hello</button></div>
                                 </td>
@@ -279,11 +279,11 @@
                                 <td class="table__usage">1,024</td>
                             </tr>
                             <tr>
-                                <td class="table__checkbox"><input type="checkbox"></td>
+                                <td class="table__checkbox"><div><input type="checkbox"></div></td>
                                 <td class="table__title">
                                     <div class="table__title-wrapper">
                                         <img src="./assets/images/image-icon.svg" alt="Image Icon">
-                                        <span>Love looks not with the eyes with the eyes</span>
+                                        <span>Love looks not with the eyes</span>
                                     </div>
                                     <div class="tag"><button class="tag--btn">/hello</button></div>
                                 </td>
@@ -294,11 +294,11 @@
                                 <td class="table__usage">1,024</td>
                             </tr>
                             <tr>
-                                <td class="table__checkbox"><input type="checkbox"></td>
+                                <td class="table__checkbox"><div><input type="checkbox"></div></td>
                                 <td class="table__title">
                                     <div class="table__title-wrapper">
                                         <img src="./assets/images/image-icon.svg" alt="Image Icon">
-                                        <span>Love looks not with the eyes with the eyes</span>
+                                        <span>Love looks not with the eyes</span>
                                     </div>
                                     <div class="tag"><button class="tag--btn">/hello</button></div>
                                 </td>
@@ -308,6 +308,23 @@
                                 <td class="table__available">Everyone</td>
                                 <td class="table__usage">1,024</td>
                             </tr>
+                            <tr>
+                                <td class="table__checkbox"><div><input type="checkbox"></div></td>
+                                <td class="table__title">
+                                    <div class="table__title-wrapper">
+                                        <img src="./assets/images/image-icon.svg" alt="Image Icon">
+                                        <span>Love looks not with the eyes</span>
+                                    </div>
+                                    <div class="tag"><button class="tag--btn">/hello</button></div>
+                                </td>
+                                <td class="table__category"><div class="inner">Sample Canned Response Response Response</div></td>
+                                <td class="table__time">Mar 17, 2021</td>
+                                <td class="table__user"><div class="inner"><img src="./assets/images/avatar.svg" alt="Avatar"><span>Jordyn Calzoni</span></div></td>
+                                <td class="table__available">Everyone</td>
+                                <td class="table__usage">1,024</td>
+                            </tr>
+
+
                         </tbody>
                     </table>
                 </div>
