--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <div class="sidebar__menu-item">
                             <a href="" class="sidebar__menu-link">
                                 <img src="./assets/images/email-icon.svg" alt="Email">
-                                <span>Email</span>
+                                <span>Inbox</span>
                             </a>
                         </div>
                         <div class="sidebar__menu-item">
